--- a/car.html
+++ b/car.html
@@ -1181,15 +1181,15 @@ sitemap: true
 								<div>
 									<i class="i-plain i-large divcenter color icon-car-fulltime"></i>
 									<div class="counter"><span data-from="10" data-to="11365" data-refresh-interval="50" data-speed="1000"></span></div>
-									<h5>Happy Customers</h5>
+									<h5>Khách hàng hài lòng</h5>
 								</div>
 							</div>
 
 							<div class="col-lg-3 col-md-6 center">
 								<div>
 									<i class="i-plain i-large divcenter color icon-car-money"></i>
-									<div class="counter"><span data-from="10" data-to="145" data-refresh-interval="50" data-speed="700"></span></div>
-									<h5>Cars in Stock</h5>
+									<div class="counter"><span data-from="10" data-to="534" data-refresh-interval="50" data-speed="700"></span></div>
+									<h5>Xe có sẵn</h5>
 								</div>
 							</div>
 
@@ -1197,7 +1197,7 @@ sitemap: true
 								<div>
 									<i class="i-plain i-large divcenter color icon-car-fan"></i>
 									<div class="counter"><span data-from="10" data-to="50" data-refresh-interval="85" data-speed="1200"></span></div>
-									<h5>Showrooms</h5>
+									<h5>Đại lý toàn quốc</h5>
 								</div>
 							</div>
 
@@ -1205,7 +1205,7 @@ sitemap: true
 								<div>
 									<i class="i-plain i-large divcenter color icon-car-fuel2"></i>
 									<div class="counter"><span data-from="10" data-to="7664" data-refresh-interval="30" data-speed="900"></span></div>
-									<h5>Awwards</h5>
+									<h5>Giải thưởng</h5>
 								</div>
 							</div>
 						</div>
@@ -1260,10 +1260,10 @@ sitemap: true
 						<div class="overlay">
 							<div class="text-overlay">
 								<div class="text-overlay-title">
-									<h3>Exteriors Looks</h3>
+									<h3>Vẻ đẹp bên ngoài</h3>
 								</div>
 								<div class="text-overlay-meta">
-									<span>McLaren 430L &rarr;</span>
+									<span>Toyota Camry 2019</span>
 								</div>
 							</div>
 						</div>
@@ -1272,10 +1272,10 @@ sitemap: true
 						<div class="overlay">
 							<div class="text-overlay">
 								<div class="text-overlay-title">
-									<h3>Interior Looks</h3>
+									<h3>Nội thất bên trong</h3>
 								</div>
 								<div class="text-overlay-meta">
-									<span>Beautiful Dashing Interiors &rarr;</span>
+									<span>Thiết kế hoàn mỹ</span>
 								</div>
 							</div>
 						</div>
@@ -1284,10 +1284,10 @@ sitemap: true
 						<div class="overlay">
 							<div class="text-overlay">
 								<div class="text-overlay-title">
-									<h3>Our Stores</h3>
+									<h3>Liên hệ với chúng tôi</h3>
 								</div>
 								<div class="text-overlay-meta">
-									<span>find out Stores &rarr;</span>
+									<span>Xem vị trí đại lý</span>
 								</div>
 							</div>
 						</div>
@@ -1303,10 +1303,10 @@ sitemap: true
 							<div class="col-padding clearfix">
 								<i class="i-plain i-xlarge icon-car-service inline-block" style="margin-bottom: 20px;"></i>
 								<div class="heading-block noborder" style="margin-bottom: 20px;">
-									<h3>Are You Looking for a New Car?</h3>
+									<h3>Bạn đang muốn tìm một chiếc xe mới?</h3>
 								</div>
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab, aspernatur, doloribus. Aspernatur, maiores earum eaque quas temporibus eius dolore dicta.</p>
-								<a href="#" class="button button-rounded button-white button-light nomargin">Know More</a>
+								<p><strong>Toyota Thái Hòa Từ Liêm</strong> sẽ là điểm dừng chân cuối cùng trong danh sách lựa chọn của bạn.</p>
+								<a href="#" class="button button-rounded button-white button-light nomargin">Xem xe mới</a>
 							</div>
 						</div>
 						<!-- Half Section 2 -->
@@ -1314,10 +1314,10 @@ sitemap: true
 							<div class="col-padding clearfix">
 								<i class="i-plain i-xlarge icon-car-care inline-block" style="margin-bottom: 20px;"></i>
 								<div class="heading-block noborder" style="margin-bottom: 20px;">
-									<h3>Want to sell a used car?</h3>
+									<h3>Bạn tìm xe đã qua sử dụng?</h3>
 								</div>
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab, aspernatur, doloribus. Aspernatur, maiores earum eaque quas temporibus eius dolore dicta.</p>
-								<a href="#" class="button button-large button-dark button-black button-rounded nomargin">Know More</a>
+								<p>Với quy mô rộng lớn và tiềm lực lớn mạnh nhất nhì thị trường ô tô, <strong>Toyota Thái Hòa Từ Liêm</strong> có tất cả những đời xe toyota tốt nhất mà bạn có thể lựa chọn!</p>
+								<a href="#" class="button button-large button-dark button-black button-rounded nomargin">Xem Xe cũ</a>
 							</div>
 						</div>
 					</div>
@@ -1328,10 +1328,10 @@ sitemap: true
 				<div class="section nomargin clearfix" style="background: #FFF url('{{ site.url }}/car/assets/media/footer-bg.jpg') center bottom no-repeat; background-size: cover; height: 770px">
 					<div class="divcenter dark center clearfix" style="max-width: 570px">
 						<div class="heading-block dark bottommargin-sm noborder">
-							<h2 class="nott t500">Raise Your Heart</h2>
-							<p style="color: #DDD; margin-top: 10px">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse ipsa necessitatibus rem facere perspiciatis neque laborum est, illum commodi sunt, nobis voluptas.</p>
+							<h2 class="nott t500">Toyota Thái Hòa Từ Liêm<br>Luôn chạm đến trái tim của bạn</h2>
+							<p style="color: #DDD; margin-top: 10px">Toyota Thái Hòa – Từ Liêm luôn nỗ lực làm hài lòng quý khách. Chúng tôi có những chính sách về giá xe hợp lý, các khuyến mại đem lại lợi ích lớn, và các lời khuyên, cố vấn chuyên nghiệp dành cho thủ tục hành chính, bao gồm trả góp và trả thẳng.</p>
 						</div>
-						<a href="demos/car/car-contact.html" class="uppercase t700 ls2" style="color: #FFF; font-size: 12px; border-bottom: 1px solid #FFF">Request a Quote</a> &rarr;
+						<a href="demos/car/car-contact.html" class="uppercase t700 ls2" style="color: #FFF; font-size: 12px; border-bottom: 1px solid #FFF">Để lại đánh giá cho Toyota Thái Hòa Từ Liêm</a> &rarr;
 					</div>
 				</div>
 
