--- a/_pages/car/contact.html
+++ b/_pages/car/contact.html
@@ -94,7 +94,7 @@ sitemap: true
 
 						<div class="col-md-4">
 							<div class="card mt-4">
-								<img class="card-img-top" src="images/call.jpg" alt="Card image cap">
+								<img class="card-img-top" src="{{ site.url }}/images/avatar/avata-nguyentronghuynh.com.jpg" alt="Trọng Huỳnh Toyota Thái Hòa Từ Liêm">
 								<div class="card-body">
 									<h4 class="mb-1 color center">ĐƯỜNG DÂY NÓNG 24/24</h4>
 									<h2 class="card-title mb-2"><i class="icon-phone-sign position-relative mr-1 color" style="top: 4px;"></i> <a href="tel:0985629621">0985.629.621</a></h2>
