--- a/_pages/car/contact.html
+++ b/_pages/car/contact.html
@@ -26,7 +26,7 @@ sitemap: true
 
 								<div class="contact-form-result"></div>
 
-								<form class="nobottommargin" id="template-contactform" name="template-contactform" action="../../include/sendemail.php" method="post">
+								<form class="nobottommargin" id="template-contactform" name="template-contactform" action="{{ site.url }}/car/assets/include/sendemail.php" method="post">
 
 									<div class="form-process"></div>
 
@@ -42,7 +42,7 @@ sitemap: true
 
 									<div class="col_one_third col_last">
 										<label for="template-contactform-phone">Số điện thoại</label>
-										<input type="text" id="template-contactform-phone" name="template-contactform-phone" value="" class="sm-form-control border-form-control" />
+										<input type="text" id="template-contactform-phone" name="template-contactform-phone" value="" class="sm-form-control border-form-control required" />
 									</div>
 
 									<div class="clear"></div>
