--- a/_pages/car/accessories.html
+++ b/_pages/car/accessories.html
@@ -1,8 +1,8 @@
 ---
 layout: car/accessories
-title: "Khách hàng hỏi về Toyota Thái Hòa Từ Liêm"
-h1-title: "Khách hàng hỏi về Toyota Thái Hòa Từ Liêm"
-meta-title: "Khách hàng hỏi về Toyota Thái Hòa Từ Liêm"
+title: "Phụ kiện chính hãng Toyota Thái Hòa Từ Liêm"
+h1-title: "Phụ kiện chính hãng Toyota Thái Hòa Từ Liêm"
+meta-title: "Phụ kiện chính hãng Toyota Thái Hòa Từ Liêm"
 description: ""
 meta-description: ""
 meta-keywords: ""
