--- a/_pages/car/accessories.html
+++ b/_pages/car/accessories.html
@@ -381,7 +381,7 @@ sitemap: true
 
 				</div>
 
-				<div class="section nomargin footer-stick clearfix" style="background: #FFF url('images/features/section-bg.jpg') left bottom no-repeat; background-size: cover; padding: 120px 0">
+				<div class="section nomargin footer-stick clearfix" style="background: #FFF url('{{ site.url }}/car/assets/media/features/section-bg.jpg') left bottom no-repeat; background-size: cover; padding: 120px 0">
 					<div class="container clearfix">
 						<div class="row">
 							<div class="col-md-6">
