--- a/_pages/car/accessories.html
+++ b/_pages/car/accessories.html
@@ -385,8 +385,8 @@ sitemap: true
 					<div class="container clearfix">
 						<div class="row">
 							<div class="col-md-6">
-								<h2 class="h2 t700 mb-4">You still can't find your Car's Parts, then please Contact Us!</h2>
-								<a href="contact.html" class="button button-color button-large button-rounded">Contact Now</a>
+								<h2 class="h2 t700 mb-4">Nếu bạn không tìm thấy phụ kiện của bạn, hãy liên hệ ngay với Toyota Thái Hòa Từ Liêm!</h2>
+								<a href="{{ site.url }}/car/contact/" class="button button-color button-large button-rounded">Liên hệ ngay</a>
 							</div>
 						</div>
 					</div>
