--- a/_pages/car/accessories.html
+++ b/_pages/car/accessories.html
@@ -24,7 +24,7 @@ sitemap: true
 						<div id="oc-wheel" class="owl-carousel shop-carousel carousel-widget" data-margin="30" data-nav="true" data-pagi="false" data-items-xs="1" data-items-sm="2" data-items-md="3" data-items-lg="4" data-autoplay="5000">
 							<div class="iproduct center">
 								<div class="product-image px-4 py-1">
-									<a href="#"><img src="images/accessories/wheels/1.jpg" alt=""></a>
+									<a href="#"><img src="{{ site.url }}/car/assets/media/accessories/wheels/1.jpg" alt=""></a>
 								</div>
 
 								<div class="product-desc">
@@ -37,7 +37,7 @@ sitemap: true
 
 							<div class="iproduct center">
 								<div class="product-image px-4 py-1">
-									<a href="#"><img src="images/accessories/wheels/2.jpg" alt=""></a>
+									<a href="#"><img src="{{ site.url }}/car/assets/media/accessories/wheels/2.jpg" alt=""></a>
 								</div>
 
 								<div class="product-desc">
@@ -50,7 +50,7 @@ sitemap: true
 
 							<div class="iproduct center">
 								<div class="product-image px-4 py-1">
-									<a href="#"><img src="images/accessories/wheels/3.jpg" alt=""></a>
+									<a href="#"><img src="{{ site.url }}/car/assets/media/accessories/wheels/3.jpg" alt=""></a>
 								</div>
 
 								<div class="product-desc">
@@ -63,7 +63,7 @@ sitemap: true
 
 							<div class="iproduct center">
 								<div class="product-image px-4 py-1">
-									<a href="#"><img src="images/accessories/wheels/4.jpg" alt=""></a>
+									<a href="#"><img src="{{ site.url }}/car/assets/media/accessories/wheels/4.jpg" alt=""></a>
 								</div>
 
 								<div class="product-desc">
@@ -76,7 +76,7 @@ sitemap: true
 
 							<div class="iproduct center">
 								<div class="product-image px-4 py-1">
-									<a href="#"><img src="images/accessories/wheels/5.jpg" alt=""></a>
+									<a href="#"><img src="{{ site.url }}/car/assets/media/accessories/wheels/5.jpg" alt=""></a>
 								</div>
 
 								<div class="product-desc">
@@ -89,7 +89,7 @@ sitemap: true
 
 							<div class="iproduct center">
 								<div class="product-image px-4 py-1">
-									<a href="#"><img src="images/accessories/wheels/6.jpg" alt=""></a>
+									<a href="#"><img src="{{ site.url }}/car/assets/media/accessories/wheels/6.jpg" alt=""></a>
 								</div>
 
 								<div class="product-desc">
@@ -110,7 +110,7 @@ sitemap: true
 						<div class="owl-carousel shop-carousel carousel-widget mb-5" data-margin="30" data-nav="true" data-pagi="false" data-items-xs="1" data-items-sm="2" data-items-md="3" data-items-lg="4" data-autoplay="5000">
 							<div class="iproduct center">
 								<div class="product-image px-4 py-1">
-									<a href="#"><img src="images/accessories/music/1.jpg" alt=""></a>
+									<a href="#"><img src="{{ site.url }}/car/assets/media/accessories/music/1.jpg" alt=""></a>
 								</div>
 
 								<div class="product-desc">
@@ -123,7 +123,7 @@ sitemap: true
 
 							<div class="iproduct center">
 								<div class="product-image px-4 py-1">
-									<a href="#"><img src="images/accessories/music/2.jpg" alt=""></a>
+									<a href="#"><img src="{{ site.url }}/car/assets/media/accessories/music/2.jpg" alt=""></a>
 								</div>
 
 								<div class="product-desc">
@@ -136,7 +136,7 @@ sitemap: true
 
 							<div class="iproduct center">
 								<div class="product-image px-4 py-1">
-									<a href="#"><img src="images/accessories/music/3.jpg" alt=""></a>
+									<a href="#"><img src="{{ site.url }}/car/assets/media/accessories/music/3.jpg" alt=""></a>
 								</div>
 
 								<div class="product-desc">
@@ -149,7 +149,7 @@ sitemap: true
 
 							<div class="iproduct center">
 								<div class="product-image px-4 py-1">
-									<a href="#"><img src="images/accessories/music/4.jpg" alt=""></a>
+									<a href="#"><img src="{{ site.url }}/car/assets/media/accessories/music/4.jpg" alt=""></a>
 								</div>
 
 								<div class="product-desc">
@@ -170,7 +170,7 @@ sitemap: true
 						<div class="owl-carousel shop-carousel carousel-widget mb-5" data-margin="30" data-nav="true" data-pagi="false" data-items-xs="1" data-items-sm="2" data-items-md="3" data-items-lg="4" data-autoplay="5000">
 							<div class="iproduct center">
 								<div class="product-image px-4 py-1">
-									<a href="#"><img src="images/accessories/engines/1.jpg" alt=""></a>
+									<a href="#"><img src="{{ site.url }}/car/assets/media/accessories/engines/1.jpg" alt=""></a>
 								</div>
 
 								<div class="product-desc">
@@ -183,7 +183,7 @@ sitemap: true
 
 							<div class="iproduct center">
 								<div class="product-image px-4 py-1">
-									<a href="#"><img src="images/accessories/engines/2.jpg" alt=""></a>
+									<a href="#"><img src="{{ site.url }}/car/assets/media/accessories/engines/2.jpg" alt=""></a>
 								</div>
 
 								<div class="product-desc">
@@ -196,7 +196,7 @@ sitemap: true
 
 							<div class="iproduct center">
 								<div class="product-image px-4 py-1">
-									<a href="#"><img src="images/accessories/engines/3.jpg" alt=""></a>
+									<a href="#"><img src="{{ site.url }}/car/assets/media/accessories/engines/3.jpg" alt=""></a>
 								</div>
 
 								<div class="product-desc">
@@ -209,7 +209,7 @@ sitemap: true
 
 							<div class="iproduct center">
 								<div class="product-image px-4 py-1">
-									<a href="#"><img src="images/accessories/engines/4.jpg" alt=""></a>
+									<a href="#"><img src="{{ site.url }}/car/assets/media/accessories/engines/4.jpg" alt=""></a>
 								</div>
 
 								<div class="product-desc">
@@ -222,7 +222,7 @@ sitemap: true
 
 							<div class="iproduct center">
 								<div class="product-image px-4 py-1">
-									<a href="#"><img src="images/accessories/engines/5.jpg" alt=""></a>
+									<a href="#"><img src="{{ site.url }}/car/assets/media/accessories/engines/5.jpg" alt=""></a>
 								</div>
 
 								<div class="product-desc">
@@ -235,7 +235,7 @@ sitemap: true
 
 							<div class="iproduct center">
 								<div class="product-image px-4 py-1">
-									<a href="#"><img src="images/accessories/engines/6.jpg" alt=""></a>
+									<a href="#"><img src="{{ site.url }}/car/assets/media/accessories/engines/6.jpg" alt=""></a>
 								</div>
 
 								<div class="product-desc">
@@ -256,7 +256,7 @@ sitemap: true
 						<div class="owl-carousel shop-carousel carousel-widget mb-5" data-margin="30" data-nav="true" data-pagi="false" data-items-xs="1" data-items-sm="2" data-items-md="3" data-items-lg="4" data-autoplay="5000">
 							<div class="iproduct center">
 								<div class="product-image px-4 py-1">
-									<a href="#"><img src="images/accessories/seats/1.jpg" alt=""></a>
+									<a href="#"><img src="{{ site.url }}/car/assets/media/accessories/seats/1.jpg" alt=""></a>
 								</div>
 
 								<div class="product-desc">
@@ -269,7 +269,7 @@ sitemap: true
 
 							<div class="iproduct center">
 								<div class="product-image px-4 py-1">
-									<a href="#"><img src="images/accessories/seats/2.jpg" alt=""></a>
+									<a href="#"><img src="{{ site.url }}/car/assets/media/accessories/seats/2.jpg" alt=""></a>
 								</div>
 
 								<div class="product-desc">
@@ -282,7 +282,7 @@ sitemap: true
 
 							<div class="iproduct center">
 								<div class="product-image px-4 py-1">
-									<a href="#"><img src="images/accessories/seats/3.jpg" alt=""></a>
+									<a href="#"><img src="{{ site.url }}/car/assets/media/accessories/seats/3.jpg" alt=""></a>
 								</div>
 
 								<div class="product-desc">
@@ -296,7 +296,7 @@ sitemap: true
 
 							<div class="iproduct center">
 								<div class="product-image px-4 py-1">
-									<a href="#"><img src="images/accessories/seats/4.jpg" alt=""></a>
+									<a href="#"><img src="{{ site.url }}/car/assets/media/accessories/seats/4.jpg" alt=""></a>
 								</div>
 
 								<div class="product-desc">
@@ -317,7 +317,7 @@ sitemap: true
 						<div class="owl-carousel shop-carousel carousel-widget mb-5" data-margin="30" data-nav="true" data-pagi="false" data-items-xs="1" data-items-sm="2" data-items-md="3" data-items-lg="4" data-autoplay="5000">
 							<div class="iproduct center">
 								<div class="product-image px-4 py-1">
-									<a href="#"><img src="images/accessories/lights/1.jpg" alt=""></a>
+									<a href="#"><img src="{{ site.url }}/car/assets/media/accessories/lights/1.jpg" alt=""></a>
 								</div>
 
 								<div class="product-desc">
@@ -329,7 +329,7 @@ sitemap: true
 							</div>
 							<div class="iproduct center">
 								<div class="product-image px-4 py-1">
-									<a href="#"><img src="images/accessories/lights/2.jpg" alt=""></a>
+									<a href="#"><img src="{{ site.url }}/car/assets/media/accessories/lights/2.jpg" alt=""></a>
 								</div>
 
 								<div class="product-desc">
@@ -341,7 +341,7 @@ sitemap: true
 							</div>
 							<div class="iproduct center">
 								<div class="product-image px-4 py-1">
-									<a href="#"><img src="images/accessories/lights/3.jpg" alt=""></a>
+									<a href="#"><img src="{{ site.url }}/car/assets/media/accessories/lights/3.jpg" alt=""></a>
 								</div>
 
 								<div class="product-desc">
@@ -353,7 +353,7 @@ sitemap: true
 							</div>
 							<div class="iproduct center">
 								<div class="product-image px-4 py-1">
-									<a href="#"><img src="images/accessories/lights/4.jpg" alt=""></a>
+									<a href="#"><img src="{{ site.url }}/car/assets/media/accessories/lights/4.jpg" alt=""></a>
 								</div>
 
 								<div class="product-desc">
@@ -366,7 +366,7 @@ sitemap: true
 
 							<div class="iproduct center">
 								<div class="product-image px-4 py-1">
-									<a href="#"><img src="images/accessories/lights/5.jpg" alt=""></a>
+									<a href="#"><img src="{{ site.url }}/car/assets/media/accessories/lights/5.jpg" alt=""></a>
 								</div>
 
 								<div class="product-desc">
