--- a/_pages/car/accessories.html
+++ b/_pages/car/accessories.html
@@ -1,7 +1,7 @@
 ---
 layout: car/accessories
 title: "Phụ kiện chính hãng Toyota Thái Hòa Từ Liêm"
-h1-title: "Phụ kiện chính hãng Toyota Thái Hòa Từ Liêm"
+h1-title: "Phụ kiện chính hãng"
 meta-title: "Phụ kiện chính hãng Toyota Thái Hòa Từ Liêm"
 description: ""
 meta-description: ""
