--- a/_pages/car/contact.html
+++ b/_pages/car/contact.html
@@ -1,7 +1,7 @@
 ---
 layout: car/page
 title: "Liên hệ Toyota Thái Hòa Từ Liêm"
-h1-title: "Liên hệ Toyota Thái Hòa Từ Liêm"
+h1-title: "Liên hệ Toyota"
 meta-title: "Liên hệ Toyota Thái Hòa Từ Liêm"
 description: ""
 meta-description: ""
