--- a/_pages/car/faqs.html
+++ b/_pages/car/faqs.html
@@ -1,7 +1,7 @@
 ---
 layout: car/page
 title: "Khách hàng hỏi về Toyota Thái Hòa Từ Liêm"
-h1-title: "Khách hàng hỏi về Toyota Thái Hòa Từ Liêm"
+h1-title: "Khách hàng hỏi về Toyota"
 meta-title: "Khách hàng hỏi về Toyota Thái Hòa Từ Liêm"
 description: ""
 meta-description: ""
