--- a/_pages/car/contact.html
+++ b/_pages/car/contact.html
@@ -1,5 +1,5 @@
 ---
-layout: car/page
+layout: car/contact
 title: "Liên hệ Toyota Thái Hòa Từ Liêm"
 h1-title: "Liên hệ Toyota"
 meta-title: "Liên hệ Toyota Thái Hòa Từ Liêm"
