--- a/car.html
+++ b/car.html
@@ -649,7 +649,7 @@ sitemap: true
 									<h3>Bạn đang muốn tìm một chiếc xe mới?</h3>
 								</div>
 								<p><strong>Toyota Thái Hòa Từ Liêm</strong> sẽ là điểm dừng chân cuối cùng trong danh sách lựa chọn của bạn.</p>
-								<a href="#" class="button button-rounded button-white button-light nomargin">Xem xe mới</a>
+								<a href="https://nguyentronghuynh.com/car/new/" class="button button-rounded button-white button-light nomargin">Xem xe mới</a>
 							</div>
 						</div>
 						<!-- Half Section 2 -->
@@ -660,7 +660,7 @@ sitemap: true
 									<h3>Bạn tìm xe đã qua sử dụng?</h3>
 								</div>
 								<p>Với quy mô rộng lớn và tiềm lực lớn mạnh nhất nhì thị trường ô tô, <strong>Toyota Thái Hòa Từ Liêm</strong> có tất cả những đời xe toyota tốt nhất mà bạn có thể lựa chọn!</p>
-								<a href="#" class="button button-large button-dark button-black button-rounded nomargin">Xem Xe cũ</a>
+								<a href="https://nguyentronghuynh.com/car/old/" class="button button-large button-dark button-black button-rounded nomargin">Xem Xe cũ</a>
 							</div>
 						</div>
 					</div>
