--- a/car.html
+++ b/car.html
@@ -599,7 +599,7 @@ sitemap: true
 				<!-- Masonry Thums
 				============================================= -->
 				<div class="row m-0 dark clearfix" data-height-xs="500" data-height-sm="500" data-height-md="350" data-height-lg="350" data-height-xl="350">
-					<a href="demos/car/car-single.html" class="col-md-4 image_fade border-right" style="background: url('{{ site.url }}/car/assets/media/categories/1.jpg') no-repeat center center / cover;">
+					<a href="#" class="col-md-4 image_fade border-right" style="background: url('{{ site.url }}/car/assets/media/categories/1.jpg') no-repeat center center / cover;">
 						<div class="overlay">
 							<div class="text-overlay">
 								<div class="text-overlay-title">
@@ -611,7 +611,7 @@ sitemap: true
 							</div>
 						</div>
 					</a>
-					<a href="demos/car/car-accessories.html" class="col-md-4 image_fade p-0 border-right" style="background: url('{{ site.url }}/car/assets/media/categories/2.jpg') no-repeat center center / cover;">
+					<a href="#" class="col-md-4 image_fade p-0 border-right" style="background: url('{{ site.url }}/car/assets/media/categories/2.jpg') no-repeat center center / cover;">
 						<div class="overlay">
 							<div class="text-overlay">
 								<div class="text-overlay-title">
@@ -623,7 +623,7 @@ sitemap: true
 							</div>
 						</div>
 					</a>
-					<a href="demos/car/car-contact.html" class="col-md-4 image_fade p-0" style="background: url('{{ site.url }}/car/assets/media/categories/3.jpg') no-repeat center center / cover;">
+					<a href="{{ site.url }}/car/contact/" class="col-md-4 image_fade p-0" style="background: url('{{ site.url }}/car/assets/media/categories/3.jpg') no-repeat center center / cover;">
 						<div class="overlay">
 							<div class="text-overlay">
 								<div class="text-overlay-title">
