--- a/car.html
+++ b/car.html
@@ -33,9 +33,130 @@ sitemap: true
 					</div>
 				</div> <!-- Moving car on scroll End -->
 
+				<div class="section nomargin">
+					<div class="container">
+						<div class="row py-5 clearfix">
+							<div class="col-md-4 mb-md-3 mb-5">
+								<div class="feature-box fbox-plain">
+									<div class="fbox-icon">
+										<a href="#"><i class="icon-car-battery"></i></a>
+									</div>
+									<h3>Long Battery Life</h3>
+									<p>Canvas provides support for Native HTML5 Videos that can be added to a Background.</p>
+								</div>
+							</div>
+							<div class="col-md-4 mb-md-3 mb-5">
+								<div class="feature-box fbox-plain">
+									<div class="fbox-icon">
+										<a href="#"><i class="icon-car-cogs2"></i></a>
+									</div>
+									<h3>24x7 Service</h3>
+									<p>Complete control on each &amp; every element that provides endless customization.</p>
+								</div>
+							</div>
+							<div class="col-md-4 mb-md-3 mb-5">
+								<div class="feature-box fbox-plain">
+									<div class="fbox-icon">
+										<a href="#"><i class="icon-car-pump"></i></a>
+									</div>
+									<h3>Petrol, Diesel &amp; LPG</h3>
+									<p>Change your Website's Primary Scheme instantly by simply adding the dark class.</p>
+								</div>
+							</div>
+							<div class="col-md-4 mt-0 mt-md-5">
+								<div class="feature-box fbox-plain">
+									<div class="fbox-icon">
+										<a href="#"><i class="icon-car-meter"></i></a>
+									</div>
+									<h3>Powerful Dashboard</h3>
+									<p>Canvas provides support for Native HTML5 Videos that can be added to a Background.</p>
+								</div>
+							</div>
+							<div class="col-md-4 mt-5">
+								<div class="feature-box fbox-plain">
+									<div class="fbox-icon">
+										<a href="#"><i class="icon-car-paint"></i></a>
+									</div>
+									<h3>Differnt Color Options</h3>
+									<p>Complete control on each &amp; every element that provides endless customization.</p>
+								</div>
+							</div>
+							<div class="col-md-4 mt-5">
+								<div class="feature-box fbox-plain">
+									<div class="fbox-icon">
+										<a href="#"><i class="icon-car-wheel"></i></a>
+									</div>
+									<h3>All wheel Drive</h3>
+									<p>Change your Website's Primary Scheme instantly by simply adding the dark class.</p>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+
+				<div class="row clearfix border-bottom align-content-stretch flex-wrap">
+
+					<a href="#" class="col-lg-3 image_fade col-sm-6 p-5 order-1" style="background: url('{{ site.url }}/car/assets/media/dealers/car-wheel.jpg') no-repeat center center / cover;">
+						<div class="p-5 p-sm-0"></div>
+					</a>
+
+					<div class="col-lg-3 col-sm-6 arrow-box bg-white py-5 px-4 d-flex align-self-center order-2">
+						<div class="card noborder">
+							<div class="card-body">
+								<h3 class="mb-1">Car Alloy Wheels</h3>
+								<h5 class="text-muted t400">With faded secondary text</h5>
+								<p class="mb-0 text-black-50">Monotonectally actualize error-free total linkage with competitive niches. Competently initiate 24/7 internal.</p>
+							</div>
+						</div>
+					</div>
+
+					<a href="#" class="col-lg-3 col-sm-6 image_fade p-5 order-3 order-sm-4 order-lg-3" style="background: url('{{ site.url }}/car/assets/media/dealers/car-light.jpg') no-repeat center center / cover;">
+						<div class="p-5 p-sm-0"></div>
+					</a>
+
+					<div class="col-lg-3 col-sm-6 arrow-box bg-white py-5 px-4 d-flex align-self-center order-4 order-sm-3 order-lg-4">
+						<div class="card noborder">
+							<div class="card-body">
+								<h3 class="mb-1">Car Head Lights</h3>
+								<h5 class="text-muted t400">With faded secondary text</h5>
+								<p class="mb-0 text-black-50">Monotonectally actualize error-free total linkage with competitive niches. Competently initiate 24/7 internal.</p>
+							</div>
+						</div>
+					</div>
+
+					<div class="col-lg-3 col-sm-6 arrow-box right bg-white py-5 px-4 d-flex align-self-center order-6 order-md-6 order-lg-5">
+						<div class="card noborder">
+							<div class="card-body">
+								<h3 class="mb-1">Premium Interiors</h3>
+								<h5 class="text-muted t400">With faded secondary text</h5>
+								<p class="mb-0 text-black-50">Monotonectally actualize error-free total linkage with competitive niches. Competently initiate 24/7 internal.</p>
+							</div>
+						</div>
+					</div>
+
+					<a href="#" class="col-lg-3 image_fade col-sm-6 p-5 order-md-5 order-5 order-lg-6" style="background: url('{{ site.url }}/car/assets/media/dealers/car-interior.jpg') no-repeat center center / cover;">
+						<div class="p-5 p-sm-0"></div>
+					</a>
+
+					<div class="col-lg-3 col-sm-6 arrow-box right bg-white py-5 px-4 d-flex align-self-center order-8 order-sm-7">
+						<div class="card noborder">
+							<div class="card-body">
+								<h3 class="mb-1">Comfortable Leather Seats</h3>
+								<h5 class="text-muted t400">With faded secondary text</h5>
+								<p class="mb-0 text-black-50">Monotonectally actualize error-free total linkage with competitive niches. Competently initiate 24/7 internal.</p>
+							</div>
+						</div>
+					</div>
+
+					<a href="#" class="col-lg-3 image_fade col-sm-6 p-5 order-7 order-sm-8" style="background: url('{{ site.url }}/car/assets/media/dealers/car-seat.jpg') no-repeat center center / cover;">
+						<div class="p-5 p-sm-0"></div>
+					</a>
+
+				</div>
+
 				<!-- Features Section
 				============================================= -->
-				<div class="container clearfix">
+				<!--div class="container clearfix">
 
 					<div class="row clearfix topmargin bottommargin">
 
