--- a/car.html
+++ b/car.html
@@ -25,74 +25,13 @@ sitemap: true
 						<div class="row clearfix" style="position: relative;">
 							<div class="col-lg-6 offset-lg-6">
 								<div class="heading-block hlarge">
-									<h1>TOYOTA<br>THÁI HÒA TỪ LIÊM</h1>
+									<h1 style="font-size: 50px;">TOYOTA<br><strong>THÁI HÒA TỪ LIÊM</strong></h1>
 								</div>
 								<p><a href="{{ site.url }}/car/"><strong>TOYOTA THÁI HÒA TỪ LIÊM</strong></a> là đại lý 3S chính thức của <a href="www.toyota.com.vn">Toyota Việt Nam</a> tọa lạc tại vị trí phía tây Hà Nội với trục đường Tố Hữu Mỗ Lao. <b>Toyota Thái Hòa Từ Liêm</b> Hoạt động kết hợp 3 chức năng: Bán hàng; Bảo dưỡng, sửa chữa và Cung cấp phụ tùng chính hãng thành một hệ thống thống nhất.</p>
 							</div>
 						</div>
 					</div>
 				</div> <!-- Moving car on scroll End -->
-
-				<div class="section nomargin">
-					<div class="container">
-						<div class="row py-5 clearfix">
-							<div class="col-md-4 mb-md-3 mb-5">
-								<div class="feature-box fbox-plain">
-									<div class="fbox-icon">
-										<a href="#"><i class="icon-car-battery"></i></a>
-									</div>
-									<h3>Long Battery Life</h3>
-									<p>Canvas provides support for Native HTML5 Videos that can be added to a Background.</p>
-								</div>
-							</div>
-							<div class="col-md-4 mb-md-3 mb-5">
-								<div class="feature-box fbox-plain">
-									<div class="fbox-icon">
-										<a href="#"><i class="icon-car-cogs2"></i></a>
-									</div>
-									<h3>24x7 Service</h3>
-									<p>Complete control on each &amp; every element that provides endless customization.</p>
-								</div>
-							</div>
-							<div class="col-md-4 mb-md-3 mb-5">
-								<div class="feature-box fbox-plain">
-									<div class="fbox-icon">
-										<a href="#"><i class="icon-car-pump"></i></a>
-									</div>
-									<h3>Petrol, Diesel &amp; LPG</h3>
-									<p>Change your Website's Primary Scheme instantly by simply adding the dark class.</p>
-								</div>
-							</div>
-							<div class="col-md-4 mt-0 mt-md-5">
-								<div class="feature-box fbox-plain">
-									<div class="fbox-icon">
-										<a href="#"><i class="icon-car-meter"></i></a>
-									</div>
-									<h3>Powerful Dashboard</h3>
-									<p>Canvas provides support for Native HTML5 Videos that can be added to a Background.</p>
-								</div>
-							</div>
-							<div class="col-md-4 mt-5">
-								<div class="feature-box fbox-plain">
-									<div class="fbox-icon">
-										<a href="#"><i class="icon-car-paint"></i></a>
-									</div>
-									<h3>Differnt Color Options</h3>
-									<p>Complete control on each &amp; every element that provides endless customization.</p>
-								</div>
-							</div>
-							<div class="col-md-4 mt-5">
-								<div class="feature-box fbox-plain">
-									<div class="fbox-icon">
-										<a href="#"><i class="icon-car-wheel"></i></a>
-									</div>
-									<h3>All wheel Drive</h3>
-									<p>Change your Website's Primary Scheme instantly by simply adding the dark class.</p>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
 
 				<div class="row clearfix border-bottom align-content-stretch flex-wrap">
 
@@ -103,9 +42,9 @@ sitemap: true
 					<div class="col-lg-3 col-sm-6 arrow-box bg-white py-5 px-4 d-flex align-self-center order-2">
 						<div class="card noborder">
 							<div class="card-body">
-								<h3 class="mb-1">Car Alloy Wheels</h3>
-								<h5 class="text-muted t400">With faded secondary text</h5>
-								<p class="mb-0 text-black-50">Monotonectally actualize error-free total linkage with competitive niches. Competently initiate 24/7 internal.</p>
+								<h3 class="mb-1">BẢO DƯỠNG NHANH</h3>
+								<!--h5 class="text-muted t400">With faded secondary text</h5-->
+								<p class="mb-0 text-black-50">Toyota Thái Hòa Từ Liêm đã đầu tư trang thiết bị cơ sở vật chất kỹ thuật tiên tiến và trang bị khoang bảo dưỡng nhanh những thiết bị chuyên dùng, hiện đại, thiết lập quy trình làm việc bảo dưỡng nhanh theo tiêu chuẩn của Toyota.</p>
 							</div>
 						</div>
 					</div>
@@ -117,9 +56,9 @@ sitemap: true
 					<div class="col-lg-3 col-sm-6 arrow-box bg-white py-5 px-4 d-flex align-self-center order-4 order-sm-3 order-lg-4">
 						<div class="card noborder">
 							<div class="card-body">
-								<h3 class="mb-1">Car Head Lights</h3>
-								<h5 class="text-muted t400">With faded secondary text</h5>
-								<p class="mb-0 text-black-50">Monotonectally actualize error-free total linkage with competitive niches. Competently initiate 24/7 internal.</p>
+								<h3 class="mb-1">SỬA CHỮA NHANH THÂN XE VÀ ĐỒNG SƠN</h3>
+								<!--h5 class="text-muted t400">With faded secondary text</h5-->
+								<p class="mb-0 text-black-50">Một loại hình dịch vụ sửa chữa nhanh thân xe và sơn hoàn toàn mới của Toyota Thái Hòa Từ Liêm nhờ khoang sửa chữa riêng biệt tích hợp sẵn các dụng cụ chuyên dùng giúp việc sửa chữa có thể hoàn thiện nhanh chóng mà vẫn đảm bảo mặt chất lượng cao nhất.</p>
 							</div>
 						</div>
 					</div>
@@ -127,9 +66,9 @@ sitemap: true
 					<div class="col-lg-3 col-sm-6 arrow-box right bg-white py-5 px-4 d-flex align-self-center order-6 order-md-6 order-lg-5">
 						<div class="card noborder">
 							<div class="card-body">
-								<h3 class="mb-1">Premium Interiors</h3>
-								<h5 class="text-muted t400">With faded secondary text</h5>
-								<p class="mb-0 text-black-50">Monotonectally actualize error-free total linkage with competitive niches. Competently initiate 24/7 internal.</p>
+								<h3 class="mb-1">CHĂM SÓC VÀ LÀM ĐẸP XE</h3>
+								<!--h5 class="text-muted t400">With faded secondary text</h5-->
+								<p class="mb-0 text-black-50">Toyota Thái Hòa Từ Liêm cung cấp các dịch vụ chăm sóc xe đa dạng giúp cho chiếc xe của Quý khách hàng luôn có được vẻ đẹp toàn diện. Phong cách song hành cùng đẳng cấp.</p>
 							</div>
 						</div>
 					</div>
@@ -141,9 +80,9 @@ sitemap: true
 					<div class="col-lg-3 col-sm-6 arrow-box right bg-white py-5 px-4 d-flex align-self-center order-8 order-sm-7">
 						<div class="card noborder">
 							<div class="card-body">
-								<h3 class="mb-1">Comfortable Leather Seats</h3>
-								<h5 class="text-muted t400">With faded secondary text</h5>
-								<p class="mb-0 text-black-50">Monotonectally actualize error-free total linkage with competitive niches. Competently initiate 24/7 internal.</p>
+								<h3 class="mb-1">CHIẾN DỊCH SỬA CHỮA ĐẶC BIỆT</h3>
+								<!--h5 class="text-muted t400">With faded secondary text</h5-->
+								<p class="mb-0 text-black-50">Đặt hẹn đơn giản. Tư vấn nhanh chóng. Chúng tôi sẽ thực hiện kiểm tra xe và tư vấn sửa chữa miễn phí cho các khách hàng nằm trong Chiến Dịch Đặc Biệt của Toyota Thái Hòa Từ Liêm.</p>
 							</div>
 						</div>
 					</div>
@@ -152,6 +91,67 @@ sitemap: true
 						<div class="p-5 p-sm-0"></div>
 					</a>
 
+				</div>
+
+				<div class="section nomargin">
+					<div class="container">
+						<div class="row py-5 clearfix">
+							<div class="col-md-4 mb-md-3 mb-5">
+								<div class="feature-box fbox-plain">
+									<div class="fbox-icon">
+										<a href="#"><i class="icon-calculator"></i></a>
+									</div>
+									<h3>DỰ TOÁN CHI PHÍ</h3>
+									<!--p>Canvas provides support for Native HTML5 Videos that can be added to a Background.</p-->
+								</div>
+							</div>
+							<div class="col-md-4 mb-md-3 mb-5">
+								<div class="feature-box fbox-plain">
+									<div class="fbox-icon">
+										<a href="#"><i class="icon-refresh"></i></a>
+									</div>
+									<h3>SO SÁNH XE</h3>
+									<!--p>Complete control on each &amp; every element that provides endless customization.</p-->
+								</div>
+							</div>
+							<div class="col-md-4 mb-md-3 mb-5">
+								<div class="feature-box fbox-plain">
+									<div class="fbox-icon">
+										<a href="#"><i class="icon-car"></i></a>
+									</div>
+									<h3>LÁI THỬ XE</h3>
+									<!--p>Change your Website's Primary Scheme instantly by simply adding the dark class.</p-->
+								</div>
+							</div>
+							<div class="col-md-4 mt-0 mt-md-5">
+								<div class="feature-box fbox-plain">
+									<div class="fbox-icon">
+										<a href="#"><i class="icon-car-meter"></i></a>
+									</div>
+									<h3>SỬA CHỮA ĐẶC BIỆT</h3>
+									<!--p>Canvas provides support for Native HTML5 Videos that can be added to a Background.</p-->
+								</div>
+							</div>
+							<div class="col-md-4 mt-5">
+								<div class="feature-box fbox-plain">
+									<div class="fbox-icon">
+										<a href="#"><i class="icon-wrench"></i></a>
+									</div>
+									<h3>ĐẶT HẸN DỊCH VỤ</h3>
+									<!--p>Complete control on each &amp; every element that provides endless customization.</p-->
+								</div>
+							</div>
+							<div class="col-md-4 mt-5">
+								<div class="feature-box fbox-plain">
+									<div class="fbox-icon">
+										<a href="#"><i class="icon-envelope"></i></a>
+									</div>
+									<h3>NHẬN THÔNG TIN</h3>
+									<!--p>Change your Website's Primary Scheme instantly by simply adding the dark class.</p-->
+								</div>
+							</div>
+						</div>
+					</div>
 				</div>
 
 				<!-- Features Section
